--- a/NEM-2/package.json
+++ b/NEM-2/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "NEM-2",
+  "name": "nem-2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,7 +19,8 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1"
-    
-  }
+  },
+  "description": ""
 }
