--- a/NEM-2/package.json
+++ b/NEM-2/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "cross-env PORT=3001 node index.js",
     "dev": "nodemon index.js",
     "editor.formatOnSave": true
   },
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.17.0",
     "eslint-plugin-node": "^11.1.0",
     "nodemon": "^2.0.6"
@@ -22,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongose": "0.0.2-security"
   },
   "description": ""
 }
