--- a/NEM-2/package.json
+++ b/NEM-2/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongoose": "^5.11.10",
     "mongose": "0.0.2-security"
   },
