--- a/NEM-3/package.json
+++ b/NEM-3/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.1.0"
   },
   "engines": {
