--- a/NEM-2/package.json
+++ b/NEM-2/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "eslint": "^7.17.0",
     "eslint-plugin-node": "^11.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.1.0",
     "nodemon": "^2.0.6"
   },
   "engines": {
